--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:text="写  @@@  入" />
+        android:text="写  @@@  入 write" />
 
     <Button
         android:id="@+id/button2"
@@ -26,7 +26,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button1"
-        android:text="读  @@@  取" />
+        android:text="读  @@@  取 read" />
 
     <ScrollView
         android:layout_width="match_parent"
